# SMS-Kernel-Bessel-Primeiro-Tipo

./: .gitignore  README.md  pyproject.toml
GRUPO 1/SMS_Completo_Corr_1_grupo_1/: my_output_SMS_Bessel_Corr_1.txt  rank_global_1.txt
GRUPO 1/SMS_Completo_Corr_3_grupo_1/: SMS_Completo_Corr_3_Bessel_grupo_1.R  rank_global_1.txt
GRUPO 1/SMS_Completo_Corr_4_grupo_1/: SMS_Completo_Corr_4_Bessel_grupo_1.R
GRUPO 1/SMS_Completo_Corr_5_grupo_1/: my_output_SMS_Bessel_Corr_5.txt  my_output_SMS_Rank_Corr_5.txt
GRUPO 1/SMS_Completo_Corr_6_grupo_1/: .Rhistory  my_output_SMS_Rank_Corr_6.txt
GRUPO 2/SMS_Completo_Corr_1_grupo_2/: SMS_Completo_Corr_1_Bessel_grupo_2.R  my_output_SMS_Bessel_Corr_1.txt  my_output_SMS_Rank_Corr_1.txt  rank_Random_Forest_1.txt
GRUPO 2/SMS_Completo_Corr_2_grupo_2/: my_output_SMS_Bessel_Corr_2.txt  my_output_SMS_Rank_Corr_2.txt
GRUPO 2/SMS_Completo_Corr_3_grupo_2/: my_output_SMS_Bessel_Corr_3.txt
GRUPO 2/SMS_Completo_Corr_4_grupo_2/: SMS_Completo_Corr_4_Bessel_grupo_2.R
GRUPO 2/SMS_Completo_Corr_5_grupo_2/: rank_global_5.txt
GRUPO 3/SMS_Completo_Corr_2_grupo_3/: SMS_Completo_Corr_2_Bessel_grupo_3.R  my_output_SMS_Bessel_Corr_2.txt
GRUPO 3/SMS_Completo_Corr_3_grupo_3/: SMS_Completo_Corr_3_Bessel_grupo_3.R
GRUPO 3/SMS_Completo_Corr_4_grupo_3/: SMS_Completo_Corr_4_Bessel_grupo_3.R  my_output_SMS_Bessel_Corr_4.txt
GRUPO 3/SMS_Completo_Corr_6_grupo_3/: .Rhistory  SMS_Completo_Corr_6_Bessel_grupo_3.R  my_output_SMS_Bessel_Corr_6.txt  rank_Random_Forest_6.txt  rank_global_6.txt
r/grupo_1/SMS_Completo_Corr_2_grupo_1/: rank_Random_Forest_2.txt  (+2 more)
(+31 files in other folders)
