[project]
name = "sms-kernel-bessel"
version = "0.1.0"
description = "Ambiente Python auxiliar (radian/IPython) para o projeto R SMS com kernel de Bessel."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "radian>=0.6.13",
]

[dependency-groups]
dev = [
    "ipython>=8.18.0",
]

[tool.uv]
package = false
